@@ -4,5 +4,6 @@ AUTOMAKE_OPTIONS = 1.8
 
 stylesdir = $(pkgdatadir)/styles
 
-dist_styles_DATA = \
-	text-simple.xsl
+nobase_dist_styles_DATA = \
+	text-simple.xsl			\
+	xhtml-collapsible.xsl	xhtml-collapsible-xsl/*
